<resources>
    <string name="app_name">PFMoviles</string>
    <string name="title_activity_main">Android Compact - 14</string>
    <string name="total_label">Total</string>
    <string name="gastos">GASTOS</string>
    <string name="ingresos">INGRESOS</string>
    <string name="dia">Día</string>
    <string name="semana">Semana</string>
    <string name="mes">Mes</string>
    <string name="ano">Año</string>
    <string name="no_hubo_gastos_hoy">No hubo\ngastos hoy</string>
    <string name="sample_date">Hoy, 21 de Abril</string>
    <string name="sample_amount">3,250.00 S/.</string>
    <string name="add_transaction_desc">Agregar transacción</string>
    <!-- NUEVOS STRINGS SOLO PARA CUENTAS -->
    <string name="nueva_transferencia">Nueva transferencia</string>
    <string name="cuenta_principal">Principal</string>
    <string name="agregar_cuenta_o_transaccion">Añadir cuenta</string>
    <string name="icono_cuenta">Icono de cuenta</string>

    <!-- Strings para actividad_agregar_cuenta.xml -->
    <string name="titulo_anadir_cuenta">Añada una cuenta</string>
    <string name="desc_volver_atras">Volver atrás</string>
    <string name="hint_saldo_inicial">0</string>
    <string name="moneda_pen">PEN</string>
    <string name="label_nombre_cuenta">Nombre de la cuenta</string>
    <string name="hint_nombre_cuenta">Introduzca un nombre de cuenta</string>
    <string name="label_simbolos">Símbolos</string>
    <string name="boton_anadir">Añadir</string>

    <string name="titulo_crear_transferencia">Cree una transferencia</string>
    <string name="label_transferir_de">Transfiera de una cuenta</string>
    <string name="label_transferir_a">Transfiera a una cuenta</string>
    <string name="estado_no_seleccionado">No se ha seleccionado</string>
    <string name="label_transferir_cantidad">Transfiera a una cantidad</string>
    <string name="label_dia">Día</string>
    <string name="hint_comentario">Comentario</string>
    <string name="desc_calculadora">Abrir calculadora</string>
    <string name="label_comentario">Ingrese algun comentario</string>

    <string name="agregar_pago_habitual">Añadir nuevo pago habitual</string>
    <string name="desc_menu">Abrir menú de navegación</string>
    <string name="titulo_pagos_habituales">Pagos habituales</string>
    <string name="btn_crear_pago">CREAR</string>

    <string name="titulo_crear_recordatorio">Crear recordatorio</string>
    <string name="tab_gastos">Gastos</string>
    <string name="tab_ingresos">Ingresos</string>
    <string name="hint_nombre_pago">Nombre</string>
    <string name="boton_crear">Crear</string>


    <!-- Strings para actividad_crear_recordatorio.xml -->
    <string name="label_nombre_pago">Nombre del pago</string>
    <string name="hint_nombre">Nombre</string>
    <string name="label_frecuencia_recordatorio">Frecuencia del recordatorio</string>
    <string name="valor_mensualmente">Mensualmente</string>
    <string name="label_anadir_automaticamente">Añadir automaticamente</string>
    <string name="label_fecha_recordatorio_inicio">Frecuencia del recordatorio</string>
    <string name="valor_fecha_ejemplo">26 de abril, 2025</string>
    <string name="label_hora">Hora</string>
    <string name="valor_hora_ejemplo">13:32</string>
    <string name="label_fecha_finalizacion">Fecha de finalizacion del recordatorio</string>
    <string name="label_cuenta">Cuenta</string>
    <string name="label_categoria">Categoria</string>
    <string name="label_cantidad">Cantidad</string>
    <string name="hint_no_seleccionado">No se ha seleccionado</string>

    <string name="titulo_recordatorios">Recordatorios</string>
    <string name="desc_crear">Crear recordatorio</string>
    <string name="crear">Crear</string>
    <string name="desc_switch_recordatorios">Habilitar recordatorios</string>


    <string name="label_nombre_recordatorio">Nombre del recordatorio</string>
    <string name="valor_una_vez">Una vez</string>

    <string name="titulo_ajustes">Ajustes</string>
    <string name="opcion_pin">PIN</string>
    <string name="opcion_personalizacion">Personalización</string>
    <string name="opcion_apariencia">Apariencia</string>

    <!-- Strings para la pantalla de Perfil -->
    <string name="perfil_title">Perfil</string>
    <string name="profile_image_desc">Imagen de perfil del usuario</string>
    <string name="email_icon_desc">Icono de correo electrónico</string>
    <string name="edit_icon_desc">Icono de editar</string>
    <string name="password_icon_desc">Icono de contraseña</string>
    <string name="email_label">Direccion de correo electronico</string>
    <string name="user_email">usuario1@gmail.com</string>
    <string name="password_label">Contraseña</string>
    <string name="password_modify">Modificar</string>
    <string name="user_id">ID: 10983593</string>
    <string name="delete_account_desc">Borrar cuenta</string>
    <string name="logout_button">Salir</string>

    <!-- Descripciones accesibles -->
    <string name="desc_pin">Opción PIN</string>
    <string name="desc_personalizacion">Opción Personalización</string>
    <string name="desc_apariencia">Opción Apariencia</string>
    <string name="desc_ir">Ir a configuración</string>

    <string name="mensaje_establecer_pin">Puede establecer un PIN de 4 dígitos para iniciar la sesión en la aplicación.</string>
    <string name="boton_establecer_pin">Establecer PIN</string>
    <string name="titulo_personalizacion">Personalización</string>
    <string name="seccion_pantalla_inicio">Pantalla de inicio</string>
    <string name="mostrar_por_defecto">Mostrar por defecto</string>
    <string name="periodo_por_defecto">Periodo por defecto</string>
    <string name="seccion_añadir_transacciones">Añadir transacciones</string>
    <string name="cuenta_por_defecto">Cuenta por defecto</string>
    <string name="desc_mostrar_por_defecto">Mostrar por defecto</string>
    <string name="desc_periodo_defecto">Periodo por defecto</string>
    <string name="desc_cuenta_defecto">Cuenta por defecto</string>
    <string name="desc_atras">Volver atrás</string>
    <string name="total">Total</string>

    <string name="titulo_apariencia">Apariencia</string>
    <string name="label_idioma">Idioma</string>
    <string name="valor_idioma_esp">Español</string>
    <string name="label_tema">Seleccione el tema</string>
    <string name="valor_tema_predeterminado">Predeterminado</string>
    <string name="label_icono_app">Icono de la aplicación</string>
    <string name="desc_icono_1">Icono billetera</string>
    <string name="desc_icono_2">Icono dinero</string>
    <string name="desc_icono_3">Icono ahorro</string>
    <string name="desc_icono_4">Icono gato</string>

    <!-- Strings para actividad_apariencia.xml -->
    <string name="opcion_idioma">Idioma</string>
    <string name="valor_espanol">Español</string>
    <string name="opcion_seleccione_tema">Seleccione el tema</string>
    <string name="valor_predeterminado">Predeterminado</string>
    <string name="opcion_icono_app">Icono de la aplicación</string>
    <string name="desc_icono_billetera">Icono de billetera</string>
    <string name="desc_icono_bolsa">Icono de bolsa de dinero</string>
    <string name="desc_icono_cerdito">Icono de cerdito</string>
    <string name="desc_icono_gato">Icono de gato</string>

    <string name="open_drawer">Abrir menú</string>
    <string name="close_drawer">Cerrar menú</string>


    <!-- ... otros strings ... -->
    <string name="anadir_transaccion_titulo">Añadir Transacción</string>
    <string name="gastos_tab">GASTOS</string>
    <string name="ingresos_tab">INGRESOS</string>
    <string name="monto_hint">0</string>
    <string name="cuenta_label">Cuenta</string>
    <string name="categorias_label">Categorías</string>
    <string name="fecha_hint">Selecciona el día</string>
    <string name="anadir_btn">Añadir</string>
    <string name="atras_content_desc">Botón para volver atrás</string>
    <string name="icono_categoria_content_desc">Icono de la categoría</string>
    <string name="balance_total">Balance Total</string>

    <!-- res/values/strings.xml -->
    <string name="descripcion_icono_categoria">Icono de categoría</string>
</resources>